# FRAME

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  FRAME_Lang.sln  README.md  build.sh  development-process.md  instructions.md  test.cpp  test.sh
FRAME/: AST.hpp  CMakeLists.txt  FRAME.vcxproj  FRAME.vcxproj.filters  codegen.hpp  lexer.hpp  main.cpp  parser.hpp
cpp/: Makefile  frame_compiler.make  premake5.lua
cpp/bin-int/Debug-linux-/frame_compiler/: main.d
cpp/src/source/: main.cpp
frame_compiler/: Cargo.toml  a.out  frame_program.cpp
frame_compiler/src/: BodiedInstrType.rs  FrameReturnType.rs  InstrTypeDetails.rs  ProcessedBlock.rs  codegen.rs  llvm_ir_translator.rs  main.rs  parser.rs  splitter.rs  test.frame
frame_compiler/src/parser/: BodiedInstrType.rs  FrameReturnType.rs  InstrTypeDetails.rs  ProcessedBlock.rs  mod.rs
frame_compiler/src/parser/TypeDetails/: mod.rs
frame_compiler/src/parser/TypesTypes/: BodiedInstrTypes.rs
frame_compiler/src/splitter/: block.rs  frame_type.rs  instr_type.rs  instruction.rs  mod.rs
frame_compiler/src/translator/: mod.rs
libs/llvm-ir/src/: lib.rs  translator.rs
rust/frame_compiler/: Cargo.toml
rust/frame_compiler/src/: main.rs  parser.rs
src/: AST.hpp  codegen.cpp  lexer.hpp  main.cpp  modbinder.hpp  modparser.hpp  parser.hpp  test.frame
